[package]
name = "crub"
version = "0.0.0"
description = "Template for starting a Yew project using Trunk"
authors = ["purusah"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Purusah/crub"
license = "Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
gloo-timers = "0.2.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "MouseEvent",
    "FetchEvent",
    "Request",
    "FileSystemEntry",
]
